--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 
 
 </head>
-
 <body>
-  <div class=>
-  </div>
   <header class="primary-header">
     <div class="container">
       <div class="nav-wrapper">
@@ -38,12 +35,12 @@
     </div>
   </header>
 
-  <marquee width="100%" direction="left" height="30px" style="font-size: 20px">
-    This is a sample scrolling text that has scrolls texts to left.
-  </marquee>
 
   <main>
-    <section class="padding-block-900">
+    <marquee class="marque" width="100%" direction="left" height="30px" style="font-size: 20px">
+      This is a sample scrolling text that has scrolls texts to left.
+    </marquee>
+    <section class="home-intro | padding-block-900">
       <div class="container">
         <div class="even-columns">
           <div class="flow">
