fix padding background colour and marquee

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
   </header>
 
   <main>
-    <marquee class="marque" width="100%" direction="left" height="30px" style="font-size: 20px">
+    
+    <section class="home-intro">
+      <marquee class="marque" width="100%" direction="left" height="30px" style="font-size: 20px">
       This is a sample scrolling text that has scrolls texts to left.
     </marquee>
-    <section class="home-intro | padding-block-900">
       <div class="container">
         <div class="even-columns">
           <div class="flow">
