--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <section class="ani">
       <div class="context">
         <h2> NAME OF FOUNDER</h2>
-        <h3> SUB-HEADING</h3>
+        <h3> Location</h3>
         <p>It's 1st of August; we all had a meeting about what should be our first step after formally registering
           "Aadi Foundation" as an NGO. We were scrambling with innovative ideas, but later on, we agreed upon
           keeping it plain and simple. The first step on the list was to arrange funds, all our members contributed
@@ -184,7 +184,7 @@
     <section class="ani">
       <div class="context">
         <h2> NAME OF FOUNDER</h2>
-        <h3> SUB-HEADING</h3>
+        <h3> Location</h3>
         <p>It's 1st of August; we all had a meeting about what should be our first step after formally registering
           "Aadi Foundation" as an NGO. We were scrambling with innovative ideas, but later on, we agreed upon
           keeping it plain and simple. The first step on the list was to arrange funds, all our members contributed
