--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           <span class="visually-hidden">Menu</span></button>
         <nav class="primary-navigation" id="primary-navigation">
           <ul aria-label="Primary" role="list" class="nav-list">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Event</a></li>
-            <li><a href="#">Goals</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a>Home</a></li>
+            <li onclick="scrollToId('event')"><a>Event</a></li>
+            <li onclick="scrollToId('goal')"><a>Goals</a></li>
+            <li onclick="scrollToId('founders')"><a>Founders</a></li>
+            <li onclick="scrollToId('contact')"><a>Contact</a></li>
           </ul>
         </nav>
         <button class="button | display-md-inline-flex">Donate</button>
