--- a/index.html
+++ b/index.html
@@ -11,33 +11,64 @@
   <link rel="icon" type="image/png" sizes="32x32" href="Img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="Img/favicon-16x16.png">
 
+  <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+  crossorigin="anonymous"
+/>
 
 </head>
 
 <body>
 
   <!--==================== Navbar ====================-->
-  <header class="primary-header">
-    <div class="container">
-      <div class="nav-wrapper">
-        <a href="#"><img src="./Img/bvf9AqrbRFmeTkioqwci_dSCwmt0QqI70muDM.png" class="logo" alt="Aadi foundation"></a>
-        <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-          <img class="icon-hamburger" src="./Img/icon-hamburger.svg" alt="" aria-hidden="true">
-          <img class="icon-close" src="./Img/icon-close.svg" alt="" aria-hidden="true">
-          <span class="visually-hidden">Menu</span></button>
-        <nav class="primary-navigation" id="primary-navigation">
-          <ul aria-label="Primary" role="list" class="nav-list">
-            <li><a>Home</a></li>
-            <li onclick="scrollToId('event')"><a>Event</a></li>
-            <li onclick="scrollToId('goal')"><a>Goals</a></li>
-            <li onclick="scrollToId('founders')"><a>Founders</a></li>
-            <li onclick="scrollToId('contact')"><a>Contact</a></li>
-          </ul>
-        </nav>
-        <button class="button | display-md-inline-flex">Donate</button>
-      </div>
-    </div>
-  </header>
+  <section class="nav-header">
+    <div class="container-fluid">
+      <!-- NavBar code start from Here -->
+        <nav class="navbar navbar-expand-xl ">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="https://raw.githubusercontent.com/Panesar001/aadi-foundation/main/images/logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <i class="fa-solid fa-bars-staggered"></i>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto text-end">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">ABOUT</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">DONATE</a>
+                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">BLOG</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">GALLERY</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">VOLUNTEER</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">EVENTS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">CONTACT</a>
+                  </li>
+                  <li class="donate nav-item">
+                      <a class="nav-links" href="#">DONATE NOW</a>
+                    </li>
+                  </div>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          </div>
+          <!-- Navbar end here -->
+          </section>
 
   <main>
     
@@ -289,7 +320,7 @@
     
     <!--==================== FOOTER ====================-->
 
-<footer class="primary-footer | padding-block-700 bg-neutral-900 text-neutral-100" id="contact">
+<footer class="primary-footer | padding-block-700 bg-neutral-1000 text-neutral-100" id="contact">
       <div class="container">
         <div class="primary-footer-wrapper">
           <div class="primary-footer-logo-social">
@@ -320,9 +351,7 @@
                 <li onclick="scrollToId('event')"><a>Event</a></li>
                 <li onclick="scrollToId('goal')"><a>Goals</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li onclick="scrollToId('contact')"><a>Contact</a></li>
-                <li onclick="scrollToId('founders')"><a>Founders</a></li>
-                <li><a href="#">Privacy Policy</a></li>
+                <li onclick="scrollToId('founders')"><a>Founders</a></li> 
               </ul>
             </nav>
           </div>
