--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               them except in the form of bread.”
               <span style="font-size: var(--size-500);">~ Mohandas Karamchand Gandhi.</span>
             </h1>
-            <p class="para">It's 1st of August; we all had a meeting about what should be our first step after formally registering "Aadi Foundation" as an NGO. We were scrambling with innovative ideas, but later on, we agreed upon keeping it plain and simple. The first step on the list was to arrange funds, all our members contributed and got some online donations; very thankful to you guys for all your efforts we were able to do some community service, and then we contacted some volunteers for the food distribution. Once all these things were done I went to my mother and asked if she can cook something good and healthy for our first programme of food distribution believe me, or not she was<span id="dots">...</span>
+            <p class="para">“Aadi foundation” is a delhi based NGO. It’s headquarter is in Rohini, Sector-16. Aadi foundation is a not-for-profit, non-governmental organization that aims to work for the upliftment and betterment of society. We work on creating awareness about environmental and social issues through educational seminars and interactive classroom sessions. Our focus is on creating awareness among the youth and the younger generation. <span id="dots">...</span>
             </p>
            
           </div>
@@ -113,7 +113,7 @@
 
               <div class="mySlides fade">
                 <div class="numbertext">4 / 4</div>
-                <img src="Img/word-image-11.jpeg" style="width:80%">
+                <img src="Img/IMG_0079.JPG" style="width:100%">
                 <div class="text"></div>
               </div>
 
@@ -129,12 +129,14 @@
           </div>
         </div>
         <p>
-        <span id="more"> more than happy
-          to contribute in her way, she took off from the office even called some of her cohorts to help her
-          prepare a delightful, sumptuous meal filled with love, care and some sense of proud about our
-          initiative. Then all the members made lunchboxes and packed and loaded them neatly. We are all set to go. Soon after it started to rain heavily and all our motivation took a blow but we did not relent we waited to slow it down and guess what it does reduce to mere drizzling. Once we saw the rain is slowing down, we took off without any second thoughts with our moms worrying about us catching a cold. We were pumped with energy as all in their primes are; we drove off to Pitampura, to be precise behind V.I.P.S college, where we once visited before might a year ago as interns under some NGO, this feeling was different. Of course, it has to be different now we are running our small organisation to widen the scope of community service which is again in some sense another contribution to society. <br>After landing on the street we had some conversations with the kids on the street and a realisation about the disparity that exists in our society and how severe it is, on the one hand, there was a college for higher studies, where kids like us get their education and on another one, we have these poor children who are enrolled within municipal schools and we felt worst when we get to know that some were dropouts at the mere age of 13 years because they cannot afford to school, that made me wonder when education in govt. schools are free then how come someone cannot afford a thing which has no monetary liability attached to it and I asked that girl, Why? To this, she answered, 'Bhaiya Mummy-Papa ke sath kam krne jana padta hai, agar na jao toh khaana kam banta hai' this left our team shocked and a little bit sad, but that's the truth we faced there and felt we were not doing enough to fill the gap of disparity between those kids dropping out of schools in the age of learning, the age where we all privileged one's spent their time building their bases without any worries of thinking about, 'How to arrange a second meal of the day(to this we feel gratitude towards our parents). As a matter of fact,after this the team was sad and morale was also low but was resolved to take this situation head on and
-          decide soon enough we will help her find some way that at least made her capable of completing her basic education. Then, our team and volunteers distributed the 'Kadhi-chawal' boxes to the crowd present there. After this, we all dove off to a second location in a nearby basti, where we met some of the best smiles and questions like, 'Bhaiya app khana baat rahe ho na? Muje 2 boxes dena ghar bi leke jana hai' our team made an exception for the demand of that boy and gave him two boxes. After distributing around 300 Boxes, there were still people lined up to this left with our hands folded that we will return soon enough with more. After all this, we came back to our office space (of course home) partially wet and tired but with a feeling of comfort, look on our parent's faces and inner happiness; things which cannot be bought or traded. <br>
-          We are not saying that you should get out and feed all the hungry folks out there, our simple message is that everyone should contribute to making this world a better place and this is the only and only way to make it happen. Donate whatever in whatever amount it does not matter what matters is your contribution and these contributions will bloom into flowers like harmony, peace and satisfaction in return thus making your own life peaceful. It is a matter of a simple transaction, you can donate, be it money or if you cannot help us prepare our programmes or volunteer for community service. Now again there is not any hard and fast rule that you should volunteer with us only, and join any other NGO near you. The crux of the matter is to 'Help'. </span></p>
+        <span id="more">
+          The establishment has a three-point programme which is <br>
+          1. Hunger eradication <br>
+          2. Education <br>
+          3. Sanitation <br>
+          <br>
+          Our simple message is that everyone should contribute to make this world a better place and this is the only and only way to make it happen. Donate whatever in whatever amount it does not matter what matters is your contribution and this contributions will blooms into flowers like harmony, peace and satisfaction in return thus making your own life peaceful. It is the matter of simple transaction, you can donate, be it money or if you cannot help us prepare our programmes or volunteer for community service. Now again there is not any hard and fast rule that you should volunteer with us only, join any other NGO’s near you. The crux of the matter is to ‘Help’.
+        </span></p>
 
           <button style="margin-top: 30px" class="button" onclick="myFunction()" id="myBtn">Read...</button>
       </div>
@@ -215,12 +217,10 @@
       <div class="contain | padding-block-900">
         <div class="even-grid">
           <div class="context | flow">
-            <h2 class="fs-secondary-heading fw-bold"> Name of Founder</h2>
-            <h3> Location</h3>
-            <p>It's 1st of August; we all had a meeting about what should be our first step after formally registering
-              "Aadi Foundation" as an NGO. We were scrambling with innovative ideas, but later on, we agreed upon
-              keeping it plain and simple. The first step on the list was to arrange funds, all our members contributed
-              and got some online donations; very thankful to you guys for all your efforts we were able to do some</p>
+            <h2 class="fs-secondary-heading fw-bold">Aadish Bansal
+            </h2>
+            <h3> About us</h3>
+            <p>I am a Second year student at UPES, Dehradun. Currently I am pursuing BCA. Before starting ‘Aadi Foundation’ I have interned under various NGO’s to understand the complex system of society</p>
           </div>
           <div class="founder-img">
             <img src="./Img/team.JPG">
@@ -233,12 +233,10 @@
       <div class="contain | padding-block-900">
         <div class="even-grid">
           <div class="context | flow">
-            <h2 class="fs-secondary-heading fw-bold"> Name of Founder</h2>
-            <h3> Location</h3>
-            <p>It's 1st of August; we all had a meeting about what should be our first step after formally registering
-              "Aadi Foundation" as an NGO. We were scrambling with innovative ideas, but later on, we agreed upon
-              keeping it plain and simple. The first step on the list was to arrange funds, all our members contributed
-              and got some online donations; very thankful to you guys for all your efforts we were able to do some</p>
+            <h2 class="fs-secondary-heading fw-bold">Prabhat Singhmar
+            </h2>
+            <h3> About us</h3>
+            <p>I am a Second year student pursuing B.a.llb (Hons.) from Rajiv Gandhi National University of law, Patiala. As a student of law it is quite natural to have some sense of activism and only this feeling drives me to contribute something back to the society. We founded “Aadi Foundation” with an aim to have a more equal and sensitive society.</p>
           </div>
           <div class="founder-img">
             <img src="./Img/team.JPG">
