--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
               <input type="email" placeholder="Type your email">
               <button class="button" data-shadow="none">Go</button>
             </form>
-            <p>Copyright 2020. All Rights Reserved</p>
+            <p>Copyright 2022. All Rights Reserved @Gourang jain</p>
           </div>
         </div>
       </div>
